# aws_dojo

./: README.md
aws-batch/: app.py  pyproject.toml
aws-batch/docker/: Dockerfile  main.py  simple_mnist.py
aws-batch/notebook/: run_single.ipynb  run_sweep.ipynb
bashoutter/: app.py  client.py  pyproject.toml
bashoutter/api/: api.py
boto3_dojo/: pyproject.toml
boto3_dojo/s3/: .gitignore  pyproject.toml
docker/: Dockerfile
ec2-get_stated/: app.py  pyproject.toml
mnist/: app.py  pyproject.toml
mnist/pytorch/: mnist.ipynb  pytorch_get_started.ipynb
qa-bot/: app.py  pyproject.toml  run_task.py
qa-bot/docker/: Dockerfile
serverless/dynamodb/: app.py  batch_rw.py  pyproject.toml  simple_read.py  simple_write.py
serverless/lambda/: app.py  invoke_many.py  invoke_one.py  pyproject.toml
serverless/s3/: .gitignore  app.py  pyproject.toml  simple_s3.py
