[tool.poetry]
name = "aws-batch"
version = "0.1.0"
description = ""
authors = ["Kenkentake <keeeentake0908@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.72.0"
"aws-cdk.aws-batch-alpha" = "2.72.0a0"
constructs = "^10.0.0,<11.0.0"
boto3 = "^1.18.0"
jupyter = "^1.0.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
