[tool.poetry]
name = "boto3_dojo_s3"
version = "0.1.0"
description = ""
authors = ["Kenkentake <keeeentake0908@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.70.0"
boto3 = "^1.18.0"
jupyter = "^1.0.0"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
